fix pages sidebar overflow on test page, fix pages allowing invalid indexes

--- a/compass/sass/_c2_utility.scss
+++ b/compass/sass/_c2_utility.scss
@@ -1,4 +1,6 @@
 .pages {
+	position: relative;
+	z-index: 1;
 	display: flex;
 	flex-direction: row;
 	width: 100%;
